Update Gradle task dependencies to remove dependsOn 'build' task
It is generally discouraged to add dependencies on 'build', so 'javadocCleanup'
and 'jacocoTestReport' have been removed and put on better tasks. Also,
'jacocoTestReport' needs input from the test results.

Updated task dependencies:
- Gradle 'javadoc' task is finalized by 'javadocCleanup', and 'javadocCleanup'
  no longer directly invoked by 'build'
- Gradle 'jacocoTestReport' task run by 'check' instead of 'build', and
  'jacocoTestReport' depends on 'test' and 'testng'

Changes due to dependency updates:
- Add 'javadoc' generation task on Github actions that only 'build'
- Remove 'javadocCleanup' task from Github action as 'publish...' tasks
  already dependent on 'javadoc'

Miscellaneous tangential cleanup:
- Remove "pr" parameter on command line in Github workflow as parameter
  is no longer functional
- Enclose source/target compatibility in Gradle java block

--- a/.github/workflows/gradle_release.yml
+++ b/.github/workflows/gradle_release.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Upload to Codecov  
       uses: codecov/codecov-action@v1
     - name: Upload release
-      run: ./gradlew -PreleaseMode=full javadocCleanup uploadArchives --no-daemon --no-parallel --stacktrace
+      run: ./gradlew -PreleaseMode=full uploadArchives --no-daemon --no-parallel --stacktrace
       env:
         # Define secrets at https://github.com/ReactiveX/RxJava/settings/secrets/actions
         # ------------------------------------------------------------------------------ 
