--- a/.github/workflows/gradle_branch.yml
+++ b/.github/workflows/gradle_branch.yml
@@ -27,6 +27,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build branch without snapshot
-      run: ./gradlew -PreleaseMode=pr build --stacktrace
+      run: ./gradlew build --stacktrace
     - name: Upload to Codecov  
       uses: codecov/codecov-action@v1
+    - name: Generate Javadocs
+      run: ./gradlew javadoc --stacktrace
