--- a/.github/workflows/gradle_pr.yml
+++ b/.github/workflows/gradle_pr.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: PR
+name: Pull Request
 
 on:
   pull_request:
@@ -27,6 +27,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build PR
-      run: ./gradlew -PreleaseMode=pr build --stacktrace
+      run: ./gradlew build --stacktrace
     - name: Upload to Codecov  
       uses: codecov/codecov-action@v1
+    - name: Generate Javadocs
+      run: ./gradlew javadoc --stacktrace
