Replace POM_ARTIFACT_ID in gradle.properties
Added POM_ARTIFACT_ID=rxjava in gradle.properties file

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ group=io.reactivex.rxjava3
 version=3.0.0-SNAPSHOT
 description=RxJava: Reactive Extensions for the JVM – a library for composing asynchronous and event-based programs using observable sequences for the Java VM.
 
+POM_ARTIFACT_ID=rxjava
 POM_NAME=RxJava
 POM_PACKAGING=jar
 
