--- a/.github/workflows/gradle_pr.yml
+++ b/.github/workflows/gradle_pr.yml
@@ -26,9 +26,9 @@ jobs:
         restore-keys: ${{ runner.os }}-gradle-1-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build PR
+    - name: Build RxJava
       run: ./gradlew build --stacktrace
     - name: Upload to Codecov  
       uses: codecov/codecov-action@v1
-    - name: Generate Javadocs
+    - name: Generate Javadoc
       run: ./gradlew javadoc --stacktrace
