--- a/.github/workflows/gradle_snapshot.yml
+++ b/.github/workflows/gradle_snapshot.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build RxJava
       run: ./gradlew build --stacktrace --no-daemon
     - name: Upload Snapshot
-      run: ./gradlew -PreleaseMode=branch uploadArchives --no-daemon --no-parallel --stacktrace
+      run: ./gradlew -PreleaseMode=branch publish --no-daemon --no-parallel --stacktrace
       env:
         # Define secrets at https://github.com/ReactiveX/RxJava/settings/secrets/actions
         # ------------------------------------------------------------------------------ 
