--- a/.github/workflows/gradle_jdk11.yml
+++ b/.github/workflows/gradle_jdk11.yml
@@ -13,16 +13,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java-version: [ 11.0.3, 11 ]
     steps:
     - uses: actions/checkout@v2.3.5
-    - name: Set up JDK ${{ matrix.java-version }}
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         distribution: 'zulu'
-        java-version: ${{ matrix.java-version }}
+        java-version: '11'
     - name: Cache Gradle packages
       uses: actions/cache@v2.1.6
       with:
