--- a/.github/workflows/gradle_snapshot.yml
+++ b/.github/workflows/gradle_snapshot.yml
@@ -11,20 +11,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java-version: [ 8 ]
     if: github.repository == 'ReactiveX/RxJava'
     env:
       # ------------------------------------------------------------------------------ 
       CI_BUILD_NUMBER: ${{ github.run_number }}
     steps:
     - uses: actions/checkout@v2.3.5
-    - name: Set up JDK ${{ matrix.java-version }}
+    - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
         distribution: 'zulu'
-        java-version: ${{ matrix.java-version }}
+        java-version: '8'
     - name: Cache Gradle packages
       uses: actions/cache@v2.1.6
       with:
