Improve GRADLE build Performance

--- a/build.gradle
+++ b/build.gradle
@@ -214,3 +214,11 @@ if (project.hasProperty("releaseMode")) {
     */
   }
 }
+
+allprojects {
+    tasks.withType(JavaCompile).configureEach {
+        options.fork = true
+        options.incremental = true
+    }
+
+}
